webapp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: i4q-demo-webapp
  namespace: i4q-demo
  labels:
    app: i4q-demo-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i4q-demo-webapp
  template:
    metadata:
      labels:
        app: i4q-demo-webapp
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
        - name: i4q-demo-webapp
          image: quay.io/maroonayoub/i4q-webapp@sha256:8c8d348c106908069d3405037319d740754ed24c2ebd6c4f468ce4fe03f25523
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
