webapp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i4q-demo-webapp-ingress
  namespace: i4q-demo
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: i4q-demo-webapp-service
            port:
              number: 3000
